[package]
name = "twenty-postgres-proxy"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"

[dependencies]
pgwire = "0.5"
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
futures = "0.3"

